# solutions-builder

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  DEVELOPMENT.md  README.md  cookiecutter.json  pyproject.toml  skaffold.yaml  st
.github/workflow/: e2e_api_test.yaml
.github/workflows/: deployment_cloudrun_dev.yaml  deployment_gke_dev.yaml  e2e_cloudrun_api_test.yaml  e2e_gke_api_test.yaml  template_e2e_test.yaml  terraform_dev.yaml  test_comment.yaml  unit_test_linter_common.yaml  unit_test_linter_sample_service.yaml
build_tools/: DEVELOPMENT.md  README.md  build_template.sh  disable_org_policies.sh
build_tools/template_docs/: README.md
bundles/: data_analytics_app.json
cli/: cli.py  cli_utils.py  component.py  requirements.txt  tool.py
common/: Dockerfile  requirements.txt  skaffold.yaml
copier_extensions/: st_helpers.py
docs/: CLI_USAGE.md  DEVELOPMENT.md  INSTALLATION.md  OVERVIEW.md  TROUBLESHOOTING.md  getting_started.md
docs/components/: cloudrun.md  gke.md
docs/cookbook/: cloudshell.md  new_st.md
docs/guides/: cloudrun.md  cloudshell.md  gke.md  templates.md
e2e/: run_e2e_test.sh  run_template_e2e.sh
e2e/gke_api_tests/: endpoint_proxy.py  run_api_tests.sh
e2e/template_e2e_tests/: README.md  TEMPLATE_E2E_TESTS.md  run_e2e_test.sh  run_template_e2e.sh  test_cookiecutter.sh
e2e/utils/: port_forward.py
examples/genai_rag_solution/: .copier-answers.yml  README.md  sb.yaml  skaffold.yaml
experiments/task_dispatch_service/: copier.yaml  skaffold.yaml.patch
microservices/authentication/: Dockerfile  config.py  main.py  requirements.txt  skaffold.yaml
microservices/frontend_angular/: README.md  package-lock.json  package.json  skaffold.yaml
microservices/risk_analysis/: skaffold.yaml
microservices/sample_service/: .coveragerc  Dockerfile  cloudbuild.yaml  config.py  requirements-test.txt  requirements.txt  skaffold.yaml
modules/frontend_angular/: copier.yaml
modules/restful_service/: copier.yaml
modules/terraform_gke/: copier.yaml
modules/terraform_serverless_ingress/: copier.yaml
setup/: certificate_issuer.yaml  init_env_vars.sh  nginx_ingress.yaml  port_config.yaml  setup_all.sh  setup_cluster.sh  setup_ksa.sh  setup_local.sh  setup_terraform.sh
solutions_builder/cli/: add.py  cli.py  cli_constants.py  cli_utils.py  component.py  infra.py  list.py  set.py  template.py  update.py  vars.py  vars_test.py
solutions_builder/copier_extensions/: context.py  sb_helpers.py  st_helpers.py
solutions_builder/module_template/: copier.yaml  template_copier.yaml
solutions_builder/template_root/: README.md  copier.yaml  firebase.json  sb.yaml  setup.cfg  skaffold.yaml  st.yaml
solutions_template/: cli.py  cli_utils.py  component.py  requirements.txt
solutions_template/cli/: cli.py  cli_utils.py  component.py  infra.py  set.py  template.py  tool.py
solutions_template/copier_extensions/: st_helpers.py
template_root/: .gitignore  copier.yaml  st.yaml
tools/: add_license_header.sh  auth_with_sa.sh
utils/: add_license_header.sh  build_template.sh
{{cookiecutter.project_id}}/: .gitignore  DEVELOPMENT.md  README.md  cicd  cookiecutter.json  e2e  skaffold.yaml  terraform
(+744 files in other folders)
