[tool.poetry]
name = "solutions-builder"
version = "1.17.13"
description = "A solution framework to generate a project with built-in structure and modules"
authors = ["Jon Chen <jonchen@google.com>"]
license = "Apache"
readme = "README.md"
homepage = "https://github.com/GoogleCloudPlatform/solutions-builder"
repository = "https://github.com/GoogleCloudPlatform/solutions-builder"
packages = [
  { include = "solutions_builder" }
]
exclude = [
  "**/node_modules/**/*",
  "**/.terraform/**/*",
  "**/.terraform/providers/**/*",
  "**/.terraform.lock.hcl",
  "**/__pycache__/**/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
copier = "^7.2.0"
pyyaml = "^6.0"
typer = "^0.9.0"
jinja2-time = "^0.2.0"
copier-templates-extensions = "^0.3.0"
pathlib = "^1.0.1"
jinja2 = "^3.1.2"
jinja2-strcase = "^0.0.2"
pydantic = "<=1.10.12"

[tool.poetry.group.dev.dependencies]
python = ">=3.9,<4.0"
copier-templates-extensions = "^0.3.0"
copier = "^7.2.0"
PyYAML = "^6.0"
jinja2-time = "^0.2.0"
typer = "^0.9.0"

[tool.poetry.scripts]
sb = "solutions_builder.cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
